--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.5
 email-validator>=1.1.3
+PyJWT>=2.8.0
+
+# Development Dependencies
+pylint==2.17.4
